...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige">
    <LinearLayout
        android:id="@+id/adminHomeContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
...
            android:onClick="onAdminEventsButtonClick"
            android:layout_marginBottom="38dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/teal"/>

        <TextView
            android:id="@+id/greetingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_admin"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
...
