<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="80dp"
    android:background="#FFF1D0"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="144dp"
        android:layout_height="136dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/twilight_wave" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/adminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="OnAdminButtonClick"
            android:text="@string/admin" 
            android:backgroundTint="@color/teal"
            />

        <Button
            android:id="@+id/studentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="OnStudentButtonClick"
            android:text="@string/student"
            android:backgroundTint="@color/teal"
            />
    </LinearLayout>
</LinearLayout>